# urdu_strategy

./: .env  .env.example  .gitignore  CHANGES.md  Makefile  README.md  TESTS_UNITAIRES.md  improvement.md  main.py  makestructure.ps1  modules.md  pyproject.toml  requirements-dev.txt  signals.ndjson  test_signaux.ps1  tree.txt
api/: accounts.py  auth.py  errors.py  flatten.py  http_base.py  mappings.py  orders.py  positions.py  topstep_client.py
config/: config.yaml  instruments_lots.yaml  logging.yaml  risk.yaml  settings.yaml
dashboard/: server.py
data/input/: signals.csv
data/output/: contract.json
docker/: Dockerfile  docker-compose.yml
fills/: fill_resolver.py
orders/: order_builder.py  order_sender.py
risk/: risk_guard.py
scripts/: backfill_from_csv.py  reset_state.py  run_app.py  simulate_signals.py  test_place_order.py  topstepx_tool.py  validate_setup.py
signals/: reader.py
state/: trade_state.json
strategy/: entry_policy.py  schedule_executor.py  tp_manager.py  tp_placer.py
tests/: conftest.py  test_entry_policy.py  test_executor_sim.py  test_fill_resolver.py  test_log_sanitizer.py  test_order_builder.py  test_order_sender.py  test_risk_guard.py  test_schedule_executor.py  test_schedule_watcher.py  test_tp_manager.py  test_tp_placer.py
tools/: redact_headers.ps1  topstepx_contract_search.py
trading/: executor.py  lot_manager.py  rules.py  simulator.py
utils/: cli_parser.py  config_loader.py  log_sanitizer.py  logger.py  price_math.py  schedule_gate.py  schedule_watcher.py  session_gate.py  state.py  time_gate.py
(+29 files in other folders)
